review fixes and interceptor